bug 629386 - avoid using GDI font table loading for symbol fonts and italic faces in Arabic locales. r=jdaggett a=blocking2.0